blog-3recent-post

--- a/index.html
+++ b/index.html
@@ -1,38 +1,38 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-
+    <title>Música en sintonía</title>
   </head>
   <body>
     <main>
       <h1>Música en sintonía</h1>
       <p><em>Un espacio para conocer la mejor música de los últimos 100 años</em></p>
     </main>
-    <h2>Lo más reciente</h2>
+    <h2>Lo más reciente</h2><!--post más recientes del blog-->
     <div>
       <h3>El gramófono</h3>
       <p><em>El gramófono allanó el camino al disco giratorio, principal medio de difusión para el sonido grabado hasta hace relativamente pocos años.</em></p>
       <img src="../musica-sintonia/imagenes/gramofono.jpg" alt="His Master's Voice (La voz de su amo), logotipo de la compañía Gramophone">
-      <p><small><em>His Master's Voice (La voz de su amo),</em> logotipo de la compañía Gramophone.</small></p>
-      <a href="#" target="_blank" rel="noopener noreferrer">Saber más</a>
+      <p><small><em>His Master's Voice (La voz de su amo)</em>, logotipo de la compañía Gramophone.</small></p>
+      <a href="gramofono.html" target="_blank" rel="noopener noreferrer">Saber más</a>
     </div>
     <div>
       <h3>20 Canciones clave de 1900-1909</h3>
       <p><em>Una canción que encarna un género popular que hoy en día nos deja estupefactos.</em></p>
       <img src="../musica-sintonia/imagenes/scottjoplin.jpg" alt="Imágen del compositor Scott Joplin">
       <p><small><em>The Entertainer</em>, Scott Joplin, 1902.</small></p>
-      <a href="#" target="_blank" rel="noopener noreferrer">Saber más</a>
+      <a href="canciones1900.html" target="_blank" rel="noopener noreferrer">Saber más</a>
     </div>
     <div>
       <h3>5 Personajes importantes de los 1900's</h3>
       <p><em>Un pionero de las grabaciones que era tan buen imitador como cantante.</em></p>
       <img src="../musica-sintonia/imagenes/byrongharlan.jpg" alt="Byron G. Harlan al piano">
       <p><small>Byron G. Harlan al piano.</small></p>
-      <a href="#" target="_blank" rel="noopener noreferrer">Saber más</a>
+      <a href="personajes1900.html" target="_blank" rel="noopener noreferrer">Saber más</a>
     </div>
     <form action="">
       <h2>Si deseas recibir notificaciones déjanos tu email</h2>
-      <input type="email" placeholder="tucuenta@mail.com">
+      <input type="email" placeholder="tucorreo@mail.com">
       <input type="submit">
     </form>
   </body>
