--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
       <a href="gramofono.html" target="_blank" rel="noopener noreferrer">Saber más</a>
     </div>
     <div>
-      <h3>20 Canciones clave de 1900-1909</h3>
+      <h3>20 Canciones clave de 1900-1909 Parte 1</h3>
       <p><em>Una canción que encarna un género popular que hoy en día nos deja estupefactos.</em></p>
       <img src="../musica-sintonia/imagenes/scottjoplin.jpg" alt="Imágen del compositor Scott Joplin">
       <p><small><em>The Entertainer</em>, Scott Joplin, 1902.</small></p>
-      <a href="canciones1900.html" target="_blank" rel="noopener noreferrer">Saber más</a>
+      <a href="1canciones1900.html" target="_blank" rel="noopener noreferrer">Saber más</a>
     </div>
     <div>
       <h3>5 Personajes importantes de los 1900's</h3>
