--- a/personajes1900.html
+++ b/personajes1900.html
@@ -14,10 +14,18 @@
       <img src="../musica-sintonia/imagenes/byrongharlan.jpg" alt="Byron G. Harlan al piano">
       <p><small>Byron G. Harlan al piano.</small></p>
       <div>
-        <h4>Len Spencer</h4>
-        <p><em>La mitomanía en la música popular empezó aquí</em></p>
+        <h4>1. Len Spencer</h4>
+        <p><em>La mitomanía en la música popular empezó aquí.</em></p>
         <p>Len Spencer podría haber sido la primera estrella de música grabada conocida a nivel nacional (USA).</p>
         <p>Entró en la industria en sus comienzos y enseguida se dio cuenta de que podía tener éxito con canciones escritar por otros. Como era habitual en aquellos tiempos en un hombre blanco, grabó varios <em>coon* songs</em> y otras canciones asociadas al sur de Estados Unidos, pero cantó prácticamente en todos los estilos, excepto ópera. Entre sus grander éxitos destacan <em>Ta-ra-ra-boom der e</em> (1892), <em>Little Alabama coon</em> y <em>Dat new bully</em> (1895), <em>A hot time in the old town</em> y <em>Oh, mister Johnson, turn me loose</em> las dos de 1897, y <em>Hello! Ma Baby</em> (1899).</p>
+        <p>Su mayor éxito fue <em>The Arkansaw traveler</em> cuya versión entró en las listas de éxitos el 3 de noviembre de 1900. (Esta fecha, como el resto de los datos referidos a las listas de éxitos de Estados Unidos anteriores a 1955, es una estimación a cargo de los expertos en listas de éxitos Joel Whitburn y Steve Sullivan.) Era prácticamente un <em>sketch</em> humorístico con música, un novedoso número que terminó vendiendo alrededor de un millón de copias.</p>
+        <p>Spencer hizo famosas muchas de las canciones que grabó, un sorprendente número de las cuales se cantan hoy en día. También contribuyó al éxito inicial de los sellos Columbia y Victor.</p>
+        <p>Nacido en 1867, la muerte de Spencer en 1914 puso fin a una de las más triunfales carreras de cantante de música grabada de todos los tiempos.</p>
+        <p><small>*Término peyorativo referido a la gente de piel oscura.</small></p>
+        <p><em>-Ken Bloom</em></p>
+      </div>
+      <div>
+        <h4>2. Arthur Collins</h4>
       </div>
     </div>
     <form action="">
