--- a/personajes1900.html
+++ b/personajes1900.html
@@ -10,7 +10,7 @@
     </main>
     <h2>Estás leyendo</h2>
     <div>
-      <h3>5 personajes importantes de los 1900's</h3>
+      <h3>4 personajes importantes de los 1900's</h3>
       <img src="../musica-sintonia/imagenes/byrongharlan.jpg" alt="Byron G. Harlan al piano">
       <p><small>Byron G. Harlan al piano.</small></p>
       <div>
@@ -26,6 +26,29 @@
       </div>
       <div>
         <h4>2. Arthur Collins</h4>
+        <p><em>Pese a obtener una gran fama, un artista ahora olvidado a causa de la dudosa naturaleza de parte de su producción.</em></p>
+        <p>En su época, Arthur Collins (1864-1933) fue el artista de música grabada más popular en Estados Unidos. Con casi veinte años, y durante los años siguientes, fue de gira con una compañía de teatro de repertorio a la que más tarde se unió, De Wolf Hopper, especializada en las incipientes comedias musicales. Tuvo una larga carrera en la escena pero fue en las grabaciones donde djó huella. En 1898, la compañía Edison le pidió que hiciera una audición y realizó sus primeras grabaciones en cilindro de cera el 18 de mayo. Un crítico de la época dijo de sus aptitudes vocales: <em>Seguramente nunca ha habido una voz de barítono más dulce y naturalmente musical que la suya</em>. Dos años después, Byron G. Harlan se incorporó a la compañía Edison y formaron un dúo de cantantes, el más popular de Estados Unidos. Collins siguió por su cuenta y, a partir de 1906, cantó también como miembro del Peerless Quartet.</p>
+        <p>El 12 de julio de 1902, su primer gran éxito, <em>Bill Bailey, Won´t you please com home</em>, sacudió las listas de éxitos, y en 1905 obtuvo su éxito más sonado: <em>The preacher and the bear</em>.</p>
+        <p>Collins también grabó <em>Alexander's Ragtime Band</em>, de Irving Berlin, a quien ayudó a obtener popularidad.</p>
+        <p>Collins interpretó muchas de las grabaciones en dialecto afroamericano (<em>black english</em>). Aunque estas <em>canciones coon</em> eran a menudo excelentes, son políticamente inaceptables hoy en día, lo que explica el declive de su fama. Collins también grabó canciones de Bert Williams y Alex Rogers, y de otros compositores de canciones negros que no fueron censurables. Collins se retiró en 1926.</p>
+        <p><em>-Ken Bloom</em></p>
+      </div>
+      <div>
+        <h4>3. Byron G. Harlan</h4>
+        <p><em>Un pionero de las grabaciones que era tan buen imitador como cantante.</em></p>
+        <p>El primer gran éxito de Byron G. Harlan (1861-1936), artista ambulante y cantante, fue <em>Please, Mr. Conductor, don't put me off the train</em> de 1899, una obra sentimentaloide típica de la época. En 1903, Harlan grabó <em>Please mother, buy me a baby</em> y <em>The Vacant chair</em>, otras dos canciones narrativas cargadas de sentimientos profundos. Hubo excepciones como la jubilosa <em>Wait till the sun shines, Nellie</em> y el himno bélico <em>Tramp! Tramp! Tramp!</em>. La versión de tenor de <em>School Days</em> de Gus Edwards alcanzó las listas de Estados Unidos el 11 de mayo de 1907 y el éxito de esa grabación contribuyó a hacer de ella un estándar durante casi 100 años.</p>
+        <p>En sus grabaciones, Harlan solía asumir un determinado personaje cuando cantaba una canción. Una crítica entusiasta: <em>Se siente como en casa tanto si su personaje es un yanqui típico, un chulo o un cómico. Su éxito se debe en gran medida al modo a que se revela su propia encantadora personalidad a través de sus grabaciones</em>.</p>
+        <p>Harlan formó pareja más tarde con Arthur Collins, otra vieja estrella de las grabaciones. Los dos fueron anunciados como <em>Half-ton Duo</em> (ek dúo de media tonelada) a causa de su gordura. Parecía inevitable que acabasen cantando canciones cómicas como <em>Down where the wurzburger flows</em>, <em>The right church, but the wrong pew</em>, <em>Oh how she could yacki hacki wicki wacki woo</em> o <em>Alexander's Ragtime Band</em>, cuyo éxito demuestra la gran versatilidad del dúo.</p>
+        <p><em>-Ken Bloom</em></p>
+      </div>
+      <div>
+        <h4>4. Harry MacDonough</h4>
+        <p><em>Fue uno de los primero ídolos de la canción que cambió el micrófono por un despacho.</em></p>
+        <p>Nacido en Ontario en 1871, Harry MacDonough (su verdadero nombre era John MacDonald, pero en su primer cilindro se lo escribieron así y ya se lo apropió) era un polivalente pionero de la naciente insdustria musical. Se contaba entre los cantantes populares durante el cambio de siglo y fue también director asistente de grabación y director de estudios de grabacion.</p>
+        <p>MacDonough empezó su carrera antes de la década de 1900, cuando grababa para las máquinas de cilindros que funcionaban con monedas de la Michigan Electric Company; en 1898 grabó por primera vez para Edison, <em>Good-bye, sweet dream, good-bye</em>. Enseguida se convirtió en el artista más popular de la Edison, con 105 cilindros hacia 1905. Otros 250 hacia 1912, todos baladas famosas. Su mayor éxito fue <em>Shine on harvest moon</em>, que entró en las listas de éxitos de Estados Unidos el 10 de abril de 1909. Como mentor también cantó en muchos grupos vocales, entre ellos el Schubert Trio y el Edison Quartet, también conocido como The Haydn/Haydn Quartet.</p>
+        <p>Durante el tiempo en que actuó sus grabaciones siguieron siendo populares. Pero cuando en 1912 dejó de cantar para dedicarse a temas administrativos con la compañía Victor, el número de grabaciones disponibles de MacDonough cayó rápidamente; en 1917 había 77 títulos en el mercado y sólo cuatro hacia 1927.</p>
+        <p>En 1923, MacDonough pasó de ser jefe de ventas a director de artistas y repertorio en la compañía Victor Talking Machine. Se fue a la Columbia en 1925 como director de sus estudios, puesto que ocupó hasta su muerte en 1931.</p>
+        <p><em>-Ken Bloom</em></p>
       </div>
     </div>
     <form action="">
