--- a/index.html
+++ b/index.html
@@ -1,13 +1,29 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="style.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&display=swap" rel="stylesheet">
     <title>Música en sintonía</title>
+    <meta name="description" content="Reseñas y artículos sobre música">
   </head>
   <body>
-    <main>
+    <main><!--encabezado de la página-->
       <h1>Música en sintonía</h1>
       <p><em>Un espacio para conocer la mejor música de los últimos 100 años</em></p>
     </main>
+    <nav class="navbar"><!--barra lateral de navegación-->
+      <h2>Menú</h2>
+      <ul>
+        <li><a href="#">Historia</a></li>
+        <li><a href="#">Reseñas</a></li>
+        <li><a href="#">Música</a></li>
+        <li><a href="#">Sobre nosotros</a></li>
+      </ul>
+    </nav>
     <h2>Lo más reciente</h2><!--post más recientes del blog-->
     <div>
       <h3>El gramófono</h3>
