--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <meta name="description" content="Reseñas y artículos sobre música">
   </head>
   <body>
-    <main><!--encabezado de la página-->
+    <header><!--encabezado de la página-->
       <h1>Música en sintonía</h1>
       <p><em>Un espacio para conocer la mejor música de los últimos 100 años</em></p>
-    </main>
+    </header>
     <nav class="navbar"><!--barra lateral de navegación-->
       <h2>Menú</h2>
       <ul>
@@ -24,28 +24,30 @@
         <li><a href="#">Sobre nosotros</a></li>
       </ul>
     </nav>
-    <h2>Lo más reciente</h2><!--post más recientes del blog-->
-    <div>
-      <h3>El gramófono</h3>
-      <p><em>El gramófono allanó el camino al disco giratorio, principal medio de difusión para el sonido grabado hasta hace relativamente pocos años.</em></p>
-      <img src="../musica-sintonia/imagenes/gramofono.jpg" alt="His Master's Voice (La voz de su amo), logotipo de la compañía Gramophone">
-      <p><small><em>His Master's Voice (La voz de su amo)</em>, logotipo de la compañía Gramophone.</small></p>
-      <a href="gramofono.html" target="_blank" rel="noopener noreferrer">Saber más</a>
-    </div>
-    <div>
-      <h3>20 Canciones clave de 1900-1909 Parte 1</h3>
-      <p><em>Una canción que encarna un género popular que hoy en día nos deja estupefactos.</em></p>
-      <img src="../musica-sintonia/imagenes/scottjoplin.jpg" alt="Imágen del compositor Scott Joplin">
-      <p><small><em>The Entertainer</em>, Scott Joplin, 1902.</small></p>
-      <a href="1canciones1900.html" target="_blank" rel="noopener noreferrer">Saber más</a>
-    </div>
-    <div>
-      <h3>4 Personajes importantes de los 1900's</h3>
-      <p><em>Un pionero de las grabaciones que era tan buen imitador como cantante.</em></p>
-      <img src="../musica-sintonia/imagenes/byrongharlan.jpg" alt="Byron G. Harlan al piano">
-      <p><small>Byron G. Harlan al piano.</small></p>
-      <a href="personajes1900.html" target="_blank" rel="noopener noreferrer">Saber más</a>
-    </div>
+    <main>
+      <h2>Lo más reciente</h2><!--post más recientes del blog-->
+      <div>
+        <h3>El gramófono</h3>
+        <p><em>El gramófono allanó el camino al disco giratorio, principal medio de difusión para el sonido grabado hasta hace relativamente pocos años.</em></p>
+        <img src="../musica-sintonia/imagenes/gramofono.jpg" alt="His Master's Voice (La voz de su amo), logotipo de la compañía Gramophone">
+        <p><small><em>His Master's Voice (La voz de su amo)</em>, logotipo de la compañía Gramophone.</small></p>
+        <a href="gramofono.html" target="_blank" rel="noopener noreferrer">Saber más</a>
+      </div>
+      <div>
+        <h3>20 Canciones clave de 1900-1909 Parte 1</h3>
+        <p><em>Una canción que encarna un género popular que hoy en día nos deja estupefactos.</em></p>
+        <img src="../musica-sintonia/imagenes/scottjoplin.jpg" alt="Imágen del compositor Scott Joplin">
+        <p><small><em>The Entertainer</em>, Scott Joplin, 1902.</small></p>
+        <a href="1canciones1900.html" target="_blank" rel="noopener noreferrer">Saber más</a>
+      </div>
+      <div>
+        <h3>4 Personajes importantes de los 1900's</h3>
+        <p><em>Un pionero de las grabaciones que era tan buen imitador como cantante.</em></p>
+        <img src="../musica-sintonia/imagenes/byrongharlan.jpg" alt="Byron G. Harlan al piano">
+        <p><small>Byron G. Harlan al piano.</small></p>
+        <a href="personajes1900.html" target="_blank" rel="noopener noreferrer">Saber más</a>
+      </div>
+    </main>  
     <form action="">
       <h2>Si deseas recibir notificaciones déjanos tu email</h2>
       <input type="email" placeholder="tucorreo@mail.com">
